# cat_vpn_miniapp

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/src/backend/: __main__.py
backend/src/backend/api/routers/: __init__.py  dependencies.py  metrics.py  user.py
backend/src/backend/i18n/: __init__.py  i18n.py
backend/src/backend/infrastructure/di/: ioc.py
backend/src/backend/infrastructure/di/providers/: __init__.py  bot.py  transaction_manager.py  translator.py  user_repo.py
backend/src/backend/infrastructure/persistence/: __init__.py
backend/src/backend/infrastructure/persistence/models/: __init__.py  key.py  user.py
backend/src/backend/infrastructure/scheduler/: broker.py  tasks.py
backend/src/backend/interfaces/repositories/: user_repo.py
backend/src/backend/interfaces/services/: __init__.py  user_service.py
backend/src/backend/migrations/: env.py
backend/src/backend/repositories/: __init__.py  user_repo.py
backend/src/backend/services/: user_service.py
backend/src/cat_vpn_miniapp/: __main__.py
backend/src/cat_vpn_miniapp/api/routers/: __init__.py  dependencies.py  user.py
backend/src/cat_vpn_miniapp/application/services/: __init__.py  user_service.py
backend/src/cat_vpn_miniapp/bootstrap/: config.py  logging.py
backend/src/cat_vpn_miniapp/bootstrap/di/: ioc.py
backend/src/cat_vpn_miniapp/bootstrap/di/providers/: __init__.py  bot.py  config.py  database.py  user_repo.py  user_service.py
backend/src/cat_vpn_miniapp/bot/handlers/: user_handlers.py
backend/src/cat_vpn_miniapp/domain/: config.py
backend/src/cat_vpn_miniapp/domain/interfaces/: __init__.py
backend/src/cat_vpn_miniapp/domain/interfaces/repositories/: __init__.py  key_repo.py  user_repo.py
backend/src/cat_vpn_miniapp/domain/interfaces/services/: __init__.py  user_service.py
backend/src/cat_vpn_miniapp/domain/models/: __init__.py  key.py  user.py
backend/src/cat_vpn_miniapp/i18n/: __init__.py  i18n.py
backend/src/cat_vpn_miniapp/infrastructure/di/: ioc.py
backend/src/cat_vpn_miniapp/infrastructure/di/providers/: __init__.py  bot.py  config.py  database.py  key_repo.py  transaction_manager.py  translator.py  user_repo.py  user_service.py
backend/src/cat_vpn_miniapp/infrastructure/i18n/: __init__.py  i18n.py
backend/src/cat_vpn_miniapp/infrastructure/migrations/: env.py
backend/src/cat_vpn_miniapp/infrastructure/migrations/versions/: 29735d34ef57_add_unique_constraint_to_tid_in_keys.py
backend/src/cat_vpn_miniapp/infrastructure/persistence/: __init__.py
backend/src/cat_vpn_miniapp/infrastructure/persistence/models/: __init__.py  key.py  user.py
backend/src/cat_vpn_miniapp/infrastructure/scheduler/: broker.py  tasks.py
backend/src/cat_vpn_miniapp/interfaces/: __init__.py
backend/src/cat_vpn_miniapp/interfaces/repositories/: __init__.py  user_repo.py
backend/src/cat_vpn_miniapp/interfaces/services/: __init__.py  user_service.py
backend/src/cat_vpn_miniapp/migrations/: env.py
backend/src/cat_vpn_miniapp/migrations/versions/: d16269a02269_initial_migration.py
backend/src/cat_vpn_miniapp/presentation/api/: dependencies.py
backend/src/cat_vpn_miniapp/presentation/api/routers/: __init__.py  metrics.py  user.py
backend/src/cat_vpn_miniapp/presentation/bot/bot_dialogs/: dialogs.py  getters.py  handlers.py
backend/src/cat_vpn_miniapp/presentation/bot/fsm/: states.py  (+1 more)
backend/src/cat_vpn_miniapp/repositories/: __init__.py  user_repo.py
backend/src/cat_vpn_miniapp/services/: __init__.py  user_service.py
(+71 files in other folders)
