[project]
name = "cat-vpn-miniapp"
version = "1.1.0"
description = "Family mini app project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.21.0",
    "aiogram-dialog>=2.4.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "cachetools==5.5.2",
    "dishka>=1.6.0",
    "fastapi>=0.116.1",
    "fluentogram>=1.2.1",
    "jinja2>=3.1.6",
    "prometheus-client>=0.22.1",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.42",
    "taskiq>=0.11.18",
    "taskiq-redis>=1.1.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
lint = [
    "ruff~=0.12.9",
    "codespell~=2.4.1",
    "bandit~=1.8.5",
    "slotscheck~=0.19.1",
]

[tool.ruff]
include = [
    "src/**/*.py",
]
exclude = [
    "src/**/migrations/*",
]
fix = true
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors     https://docs.astral.sh/ruff/rules/#error-e
    "W", # pycodestyle warnings   https://docs.astral.sh/ruff/rules/#warning-w
    "C90", # mccabe                 https://docs.astral.sh/ruff/rules/#mccabe-c90
    "N", # pep8-naming            https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "D", # pydocstyle             https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "I", # isort                  https://docs.astral.sh/ruff/rules/#isort-i
    "F", # pyflakes               https://docs.astral.sh/ruff/rules/#pyflakes-f
    "ASYNC", # flake8-async           https://docs.astral.sh/ruff/rules/#flake8-async-async
    "C4", # flake8-comprehensions  https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "B", # flake8-bugbear         https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "Q", # flake8-quotes          https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "T20", # flake8-print           https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "SIM", # flake8-simplify        https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PT", # flake8-pytest-style    https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH", # flake8-use-pathlib     https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TCH", # flake8-type-checking   https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "RUF", # Ruff-specific rules    https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "PERF", # Perflint               https://docs.astral.sh/ruff/rules/#perflint-perf
    "UP", # pyupgrade              https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

ignore = [
    "RUF009",
    "B008",
    "ASYNC109",
    "E501",
    "C901",
    "N817",
    "N815",
    "N803",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D212",
    "D203",
    "TC001",
    "RUF001",
    "UP"
]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
